// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package rangevectorsplittingcache;

import "github.com/grafana/mimir/pkg/querier/querierpb/querier.proto";
import "gogoproto/gogo.proto";

option go_package = "cache";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_sizecache_all) = false;
// Do not generate XXX fields to reduce memory footprint.
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

message CachedSeries {
  // cacheKey contains the non-hashed cache key, to detect hash collision.
  string cacheKey = 1;
  int64 start = 2;
  int64 end = 3;
  repeated querierpb.SeriesMetadata series_metadata = 4 [(gogoproto.nullable) = false];
  bytes results = 5;
  querierpb.Annotations annotations = 6 [(gogoproto.nullable) = false];
}
